--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-  language: python
-  python:
-    - "3.6"
-  install:
+language: python
+python:
+  - "2.7"
+cache: pip
+install:
   - pip install -r requirements.txt
-  script:
-    - pytest
+script:
+  - python tests.py
